--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 				font-family: -apple-system, BlinkMacSystemFont, Neue Haas Grotesk Text Pro, Arial Nova, Tahoma, Segoe UI, Helvetica Neue, \.PingFang SC, PingFang SC, Microsoft YaHei, Microsoft JhengHei, Source Han Sans SC, Noto Sans CJK SC, Source Han Sans CN, Noto Sans SC, Source Han Sans TC, Noto Sans CJK TC, Hiragino Sans GB, sans-serif;
 			}
 			
-			h1 {
-				margin-top: 10vh;
+			a {
+				text-decoration: none;
+			}
+			
+			h1,
+			h1 a {
+				margin-top: 5vh;
 				text-align: center;
 				font-size: 20vw;
 				color: #FFC107;
 			}
-			
 			
 			p {
 				margin-top: 10vh;
@@ -37,28 +41,42 @@
 			}
 			
 			.footer a {
-				font-size: 1vw;
-				color: #FFEB3B;
+				font-size: 2vw;
+				color: #485157;
 				text-decoration: none;
 			}
 			
 			iframe {
 				display: none;
 			}
+			
+			@media (max-width: 768px) {
+				h1,
+				h1 a {
+					margin-top: 20vh;
+				}
+				.footer a {
+					font-size: 4vw;
+					color: #485157;
+					text-decoration: none;
+				}
+				p {
+					margin-top: 15vh;
+				}
+			}
 		</style>
 	</head>
 
 	<body>
 		<div class="container">
-			<h1 class="domain">🐯🐯.ws</h1>
+			<h1 class="domain"><a href="http://🐯🐯.ws">🐯🐯.ws</a></h1>
 
-				<p>WebSite Is Comming Soon...</p>
+			<p>WebSite Is Comming Soon...</p>
 
 			<div class="footer">
 				<a href="http://e12e.com">&copy; 2016 Coande</a>
 			</div>
 		</div>
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="http://music.163.com/outchain/player?type=2&id=32823869&auto=1&height=66"></iframe>
 	</body>
 
 </html>
