Modify image's path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<title>🐯🐯.ws</title>
 		<div id='wx_pic' style='margin:0 auto;display:none;'>
-			<img src='img/icon300.jpg' />
+			<img src='icon300.jpg' />
 		</div>
 		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
