Add github.ico to index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 				text-decoration: none;
 			}
 			
+			.footer img {
+				width: 2vw;
+			}
+			
 			iframe {
 				display: none;
 			}
@@ -58,13 +62,16 @@
 				h1 a {
 					margin-top: 20vh;
 				}
+				p {
+					margin-top: 15vh;
+				}
 				.footer a {
 					font-size: 4vw;
 					color: #485157;
 					text-decoration: none;
 				}
-				p {
-					margin-top: 15vh;
+				.footer img {
+					width: 4vw;
 				}
 			}
 		</style>
@@ -77,7 +84,8 @@
 			<p>WebSite Is Comming Soon...</p>
 
 			<div class="footer">
-				<a href="http://e12e.com">&copy; 2016 Coande</a>
+				<a href="http://e12e.com" target="_blank">&copy; 2016 Coande</a>&nbsp;&nbsp;
+				<a href="https://github.com/2tigers/2tigers.github.io" target="_blank"><img src="github.ico" /></a>
 			</div>
 		</div>
 	</body>
